[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geospatial-data-mainlayer"
version = "1.0.0"
description = "Geospatial and mapping data API with Mainlayer pay-per-query billing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["geospatial", "mapping", "geocoding", "api", "mainlayer", "ai-agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
